# mikroways.authkeysync

./: .cspell.json  .envrc  .gitignore  .markdownlint-cli2.yaml  .npmrc  .yamllint  PENDING.md  README.md  package-lock.json  package.json  pyproject.toml  renovate.json5
.github/workflows/: docs.yml  galaxy.yml  molecule.yml  renovate.yml
defaults/: main.yml
examples/: README.md  inventory.ini  playbook.yml  requirements.yml
examples/vagrant/: Vagrantfile  ansible.cfg  playbook-proxy.yml  playbook.yml  test-proxy.sh
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
molecule/proxy/: Dockerfile.j2  converge.yml  create.yml  molecule.yml  prepare.yml  verify.yml
tasks/: main.yml
templates/: config.yaml.j2
