[project]
name = "mikroways-authkeysync"
version = "0.1.0"
description = "Ansible role para instalar y configurar AuthKeySync"
requires-python = ">=3.12"
dependencies = [
    "ansible~=12.0",
    "molecule>=6.0",
    "molecule-plugins[docker]>=25.8.12",
    "yamllint>=1.26",
    "ansible-lint>=24.0",
]
